--- a/p8105_hw6_hmz2105.md
+++ b/p8105_hw6_hmz2105.md
@@ -147,3 +147,61 @@ confidence_intervals|>
 |:------------|-----------:|-----------:|
 | r_squared   |  0.8882079 |  0.9402552 |
 | log_product | -8.6969696 | -4.6011529 |
+
+## Problem 3
+
+In this problem I will create a linear regression model looking at
+predictors of a child’s birth weight using a dataset 4,342 children
+related variables.
+
+First, I will import and clean the dataset, taking into acount recoding
+variables and creating factors.
+
+``` r
+birthweight_df = 
+  read_csv("data/birthweight.csv") |>
+    janitor::clean_names() |>
+  mutate(
+ babysex = case_match(
+    babysex, 2~ 'female', 1 ~ 'male'),
+ frace = case_match(
+    frace, 9~'Unknown', 8~'Other', 4~ 'Puerto Rican', 3~ 'Asian', 2~ 'Black', 1 ~ 'White'),
+  malform = case_match(
+   malform, 0~ 'absent', 1 ~ 'present'),
+ mrace = case_match(
+    mrace, 8~'Other', 4~ 'Puerto Rican', 3~ 'Asian', 2~ 'Black', 1 ~ 'White'),
+ frace = forcats::fct_relevel(frace, c("White", "Black", "Asian", "Puerto Rican", "Other")),
+  mrace = forcats::fct_relevel(mrace, c("White", "Black", "Asian", "Puerto Rican"))
+  )
+```
+
+    ## Rows: 4342 Columns: 20
+    ## ── Column specification ────────────────────────────────────────────────────────
+    ## Delimiter: ","
+    ## dbl (20): babysex, bhead, blength, bwt, delwt, fincome, frace, gaweeks, malf...
+    ## 
+    ## ℹ Use `spec()` to retrieve the full column specification for this data.
+    ## ℹ Specify the column types or set `show_col_types = FALSE` to quiet this message.
+
+The birthweight data has 4342 observations and 20 variables named
+babysex, bhead, blength, bwt, delwt, fincome, frace, gaweeks, malform,
+menarche, mheight, momage, mrace, parity, pnumlbw, pnumsga, ppbmi, ppwt,
+smoken, wtgain.
+
+Next, will create a linear regression model of birthweight. Will use the
+variables sex of baby (babysex), length of baby (blength), gestational
+age of baby (gaweeks), and average cigarettes mother smoked (smoken).
+
+``` r
+fit = lm(bwt ~ babysex + blength, gaweeks, smoken, data = birthweight_df)
+
+fit |> 
+ broom::tidy()
+```
+
+    ## # A tibble: 3 × 5
+    ##   term        estimate std.error statistic  p.value
+    ##   <chr>          <dbl>     <dbl>     <dbl>    <dbl>
+    ## 1 (Intercept)  -1798.     103.       -17.5 1.56e-65
+    ## 2 babysexmale     98.9      6.95      14.2 1.03e-44
+    ## 3 blength         95.8      1.95      49.2 0
