--- a/p8105_hw6_hmz2105.md
+++ b/p8105_hw6_hmz2105.md
@@ -190,18 +190,22 @@ smoken, wtgain.
 
 Next, will create a linear regression model of birthweight. Will use the
 variables sex of baby (babysex), length of baby (blength), gestational
-age of baby (gaweeks), and average cigarettes mother smoked (smoken).
+age of baby (gaweeks), average cigarettes mother smoked (smoken), and
+mother’s weight gain during pregnancy (wtgain).
 
 ``` r
-fit = lm(bwt ~ babysex + blength, gaweeks, smoken, data = birthweight_df)
+fit = lm(bwt ~ babysex + blength + gaweeks + smoken + wtgain, data = birthweight_df)
 
 fit |> 
  broom::tidy()
 ```
 
-    ## # A tibble: 3 × 5
+    ## # A tibble: 6 × 5
     ##   term        estimate std.error statistic  p.value
     ##   <chr>          <dbl>     <dbl>     <dbl>    <dbl>
-    ## 1 (Intercept)  -1798.     103.       -17.5 1.56e-65
-    ## 2 babysexmale     98.9      6.95      14.2 1.03e-44
-    ## 3 blength         95.8      1.95      49.2 0
+    ## 1 (Intercept) -4214.      97.6      -43.2  0       
+    ## 2 babysexmale    18.7     10.1        1.86 6.30e- 2
+    ## 3 blength       125.       2.01      62.0  0       
+    ## 4 gaweeks        26.3      1.71      15.4  6.86e-52
+    ## 5 smoken         -2.85     0.678     -4.20 2.74e- 5
+    ## 6 wtgain          4.55     0.467      9.74 3.40e-22
