--- a/p8105_hw6_hmz2105.md
+++ b/p8105_hw6_hmz2105.md
@@ -18,6 +18,7 @@ library (tidyverse)
     ## ℹ Use the conflicted package (<http://conflicted.r-lib.org/>) to force all conflicts to become errors
 
 ``` r
+library(modelr)
 set.seed(123)
 ```
 
@@ -191,21 +192,142 @@ smoken, wtgain.
 Next, will create a linear regression model of birthweight. Will use the
 variables sex of baby (babysex), length of baby (blength), gestational
 age of baby (gaweeks), average cigarettes mother smoked (smoken), and
-mother’s weight gain during pregnancy (wtgain).
+mother’s weight gain during pregnancy (wtgain). Will choose these items
+as I anticipate that they will be factors that impact a child’s weight.
+See below for a plot of the beta coefficients (estimates) and p values.
 
 ``` r
 fit = lm(bwt ~ babysex + blength + gaweeks + smoken + wtgain, data = birthweight_df)
 
 fit |> 
- broom::tidy()
+ broom::tidy() |>
+  knitr::kable()
 ```
 
-    ## # A tibble: 6 × 5
-    ##   term        estimate std.error statistic  p.value
-    ##   <chr>          <dbl>     <dbl>     <dbl>    <dbl>
-    ## 1 (Intercept) -4214.      97.6      -43.2  0       
-    ## 2 babysexmale    18.7     10.1        1.86 6.30e- 2
-    ## 3 blength       125.       2.01      62.0  0       
-    ## 4 gaweeks        26.3      1.71      15.4  6.86e-52
-    ## 5 smoken         -2.85     0.678     -4.20 2.74e- 5
-    ## 6 wtgain          4.55     0.467      9.74 3.40e-22
+| term        |     estimate |  std.error |  statistic |   p.value |
+|:------------|-------------:|-----------:|-----------:|----------:|
+| (Intercept) | -4214.068211 | 97.5805279 | -43.185544 | 0.0000000 |
+| babysexmale |    18.736381 | 10.0758382 |   1.859536 | 0.0630189 |
+| blength     |   124.515381 |  2.0097351 |  61.956115 | 0.0000000 |
+| gaweeks     |    26.263820 |  1.7098324 |  15.360465 | 0.0000000 |
+| smoken      |    -2.846506 |  0.6780033 |  -4.198367 | 0.0000274 |
+| wtgain      |     4.549174 |  0.4670203 |   9.740848 | 0.0000000 |
+
+Model interpretations: \* If the child is male (compared to being
+female), and all other predictors (gestational age, child length,
+average number of cigarettes of the mother, and weight gain of the
+mother during pregnancy) are held constant, the expected increase in the
+child’s birth weight is 18.74 grams. \* For every 1 cm increase in child
+length, and with all other predictors held constant, the expected
+increase in the child’s birth weight is 124.52 grams. \* For every
+additional 1 week of gestational age, and with all other predictors held
+constant, the expected increase in the child’s birth weight is 26.26
+grams. \* For every additional 1 cigarette smoked per day by the mother,
+and with all other predictors held constant, the expected decrease in
+the child’s birth weight is -2.846506 grams. \* For every 1 pound gained
+by the mother during pregnancy, and with all other predictors held
+constant, the expected increase in the child’s birth weight is 4.54
+grams.
+
+Next will plot fitted values vs residuals.
+
+``` r
+birthweight_df|> 
+  modelr::add_predictions(fit) |>
+   modelr::add_residuals(fit) |>
+  ggplot(aes(x = pred, y = resid)) +
+  geom_point() +
+  geom_hline(yintercept = 0, linetype = "dashed", color = "red") +
+  labs(title = "Residuals vs. Fitted Values",
+       x = "Fitted Values",
+       y = "Residuals")
+```
+
+![](p8105_hw6_hmz2105_files/figure-gfm/add%20model%20residuals%20and%20fitted%20values%20and%20plot-1.png)<!-- -->
+
+In this plot, each point represents an observation. The red dashed line
+represents where residuals are zero and shows that for most points, the
+values are evenly distributed around zero. However, there appears to be
+outliers around 1000, 500, and around 5000 on the x axis.
+
+Next, fit two additional linear regression models. The model titled
+“fit_blength_gaweeks” uses predictors child length and gestational age.
+The model titled “fit_interactions” uses predictors child head size,
+child length and child sex and also takes into account the interaction
+between these predictors. See the table for the estimates from these two
+models.
+
+``` r
+fit_blength_gaweeks = lm(bwt ~blength + gaweeks, data = birthweight_df)
+
+fit_blength_gaweeks |> 
+ broom::tidy() |>
+  knitr::kable()
+```
+
+| term        |    estimate | std.error | statistic | p.value |
+|:------------|------------:|----------:|----------:|--------:|
+| (Intercept) | -4347.66707 | 97.958360 | -44.38281 |       0 |
+| blength     |   128.55569 |  1.989891 |  64.60439 |       0 |
+| gaweeks     |    27.04673 |  1.717930 |  15.74379 |       0 |
+
+``` r
+fit_interactions = lm(bwt ~bhead*blength + bhead*babysex + blength*babysex + blength*bhead*babysex, data = birthweight_df)
+
+fit_interactions |> 
+ broom::tidy() |>
+  knitr::kable()
+```
+
+| term                      |     estimate |    std.error |  statistic |   p.value |
+|:--------------------------|-------------:|-------------:|-----------:|----------:|
+| (Intercept)               |  -801.948671 | 1102.3077046 | -0.7275180 | 0.4669480 |
+| bhead                     |   -16.597546 |   34.0916082 | -0.4868514 | 0.6263883 |
+| blength                   |   -21.645964 |   23.3720477 | -0.9261475 | 0.3544209 |
+| babysexmale               | -6374.868351 | 1677.7669213 | -3.7996150 | 0.0001469 |
+| bhead:blength             |     3.324444 |    0.7125586 |  4.6655020 | 0.0000032 |
+| bhead:babysexmale         |   198.393181 |   51.0916850 |  3.8830816 | 0.0001047 |
+| blength:babysexmale       |   123.772887 |   35.1185360 |  3.5244319 | 0.0004288 |
+| bhead:blength:babysexmale |    -3.878053 |    1.0566296 | -3.6702106 | 0.0002453 |
+
+Next compare the models in terms of their ability to predict child’s
+birth weight using cross validation.
+
+``` r
+cv_df = 
+  crossv_mc(birthweight_df, 100) 
+
+cv_df =
+  cv_df |> 
+  mutate(
+    train = map(train, as_tibble),
+    test = map(test, as_tibble))
+
+cv_df = 
+  cv_df |> 
+  mutate(
+    fit_mod  = map(train, \(df) lm(bwt ~ babysex + blength + gaweeks + smoken + wtgain, data = df)),
+    fit2_mod  = map(train, \(df) lm(bwt ~blength + gaweeks, data = df)),
+    fit3_mod  = map(train, \(df) lm(bwt ~bhead*blength + bhead*babysex + blength*babysex + blength*bhead*babysex, data = df))) |> 
+  mutate(
+    rmse_fit = map2_dbl(fit_mod, test, \(mod, df) rmse(model = mod, data = df)),
+    rmse_fit2 = map2_dbl(fit2_mod, test, \(mod, df) rmse(model = mod, data = df)),
+    rmse_fit3 = map2_dbl(fit3_mod, test, \(mod, df) rmse(model = mod, data = df)))
+
+cv_df |> 
+  select(starts_with("rmse")) |> 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") |> 
+  mutate(model = fct_inorder(model)) |> 
+  ggplot(aes(x = model, y = rmse)) + geom_violin()
+```
+
+![](p8105_hw6_hmz2105_files/figure-gfm/cross%20validation-1.png)<!-- -->
+
+It appears that the model that takes into account the interaction terms
+is the best model in terms of predictions based on RMSE. A lower RMSE
+indicates better model performance as it means that, on average, the
+model’s predictions are closer to the observed values.
